--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
-MONGO_URI=mongodb://localhost:27017/podify
+MONGO_URI=mongodb://localhost:27017/musicapp
 
-MAILTRAP_USER=dbd969b3b79dbd
-MAILTRAP_PASS=********3425
+MAILTRAP_USER=7f7cd21b7598a2
+MAILTRAP_PASS=9ed640132d44d7
 
