--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,6 @@ MAILTRAP_PASS=9ed640132d44d7
 
 VERIFICATION_EMAIL=myapp@email.com
 
+PASSWORD_RESET_LINK=https://yourapp.com/reset-password
+
+SIGN_IN_URL=https://yourapp.com/sign-in
