--- a/server/.env
+++ b/server/.env
@@ -5,6 +5,6 @@ MAILTRAP_PASS=9ed640132d44d7
 
 VERIFICATION_EMAIL=myapp@email.com
 
-PASSWORD_RESET_LINK=https://yourapp.com/reset-password
+PASSWORD_RESET_LINK=http://localhost:8989/reset-password.html
 
 SIGN_IN_URL=https://yourapp.com/sign-in
