--- a/MusicPlayer/package.json
+++ b/MusicPlayer/package.json
@@ -11,10 +11,15 @@
     "show-babel-config": "npx cross-env BABEL_SHOW_CONFIG_FOR=./index.js babel ./index.js --out-file ./ignore.js"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.17",
+    "@react-navigation/native-stack": "^6.9.26",
+    "axios": "^1.6.8",
     "formik": "^2.4.6",
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-reanimated": "^3.11.0",
+    "react-native-safe-area-context": "^4.10.1",
+    "react-native-screens": "^3.31.1",
     "react-native-vector-icons": "^10.1.0",
     "yup": "^1.4.0"
   },
